--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -18,16 +18,17 @@
 }
 
 .nav__notification {
-  background-color: tomato;
-  width: 30px;
-  height: 30px;
-  border-radius: 15px;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 600;
   position: absolute;
   left: 15px;
   bottom: 15px;
+}
+
+.nav__more {
+  background-color: tomato;
+  width: 8px;
+  height: 8px;
+  border-radius: 4px;
+  position: absolute;
+  left: 35px;
+  bottom: 27px;
 }
